--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -15,20 +15,25 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="lib/underscorejs/underscore-min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- my app's js -->
+    <script src="js/globals.js"></script>
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+</head>
+<body ng-app="bushopper">
+    <ion-nav-view></ion-nav-view>
+<!--<ion-pane>-->
+    <!--<ion-header-bar class="bar-assertive">-->
+        <!--<h1 class="title">Bus Hopper</h1>-->
+    <!--</ion-header-bar>-->
+    <!--<ion-content>-->
+    <!--</ion-content>-->
+<!--</ion-pane>-->
+</body>
 </html>
