--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- prototypes -->
+    <script src="js/prototypes/RouteInfo.js"></script>
+
     <!-- my app's js -->
     <script src="js/globals.js"></script>
     <script src="js/app.js"></script>
