--- a/www/index.html
+++ b/www/index.html
@@ -17,11 +17,14 @@
 
     <script src="lib/underscorejs/underscore-min.js"></script>
 
+    <script src="lib/jquery/jquery-1.11.3.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- prototypes -->
     <script src="js/prototypes/RouteInfo.js"></script>
+    <script src="js/prototypes/TripInfo.js"></script>
 
     <!-- my app's js -->
     <script src="js/globals.js"></script>
@@ -31,12 +34,5 @@
 </head>
 <body ng-app="bushopper">
     <ion-nav-view></ion-nav-view>
-<!--<ion-pane>-->
-    <!--<ion-header-bar class="bar-assertive">-->
-        <!--<h1 class="title">Bus Hopper</h1>-->
-    <!--</ion-header-bar>-->
-    <!--<ion-content>-->
-    <!--</ion-content>-->
-<!--</ion-pane>-->
 </body>
 </html>
