--- a/www/index.html
+++ b/www/index.html
@@ -12,11 +12,8 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <!-- ionic/angularjs js -->
+    <!-- libraries -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <script src="lib/underscorejs/underscore-min.js"></script>
-
     <script src="lib/jquery/jquery-1.11.3.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -25,6 +22,9 @@
     <!-- prototypes -->
     <script src="js/prototypes/RouteInfo.js"></script>
     <script src="js/prototypes/TripInfo.js"></script>
+
+    <!-- local data -->
+    <script src="js/data/local.js"></script>
 
     <!-- my app's js -->
     <script src="js/globals.js"></script>
